2015-01-24  Julien Bect  <julien.bect@supelec.fr>

	sort.m: Overload base function

	* arrays/@stk_dataframe/sort.m: Overload base function

2015-01-23  Julien Bect  <julien.bect@supelec.fr>

	stk_conditioning.m: Overload for stk_dataframe objects

	* arrays/@stk_dataframe/stk_conditioning.m: Overload
	stk_conditioning for stk_dataframe inputs. The output is an
	stk_dataframe object if either LAMBDA or ZSIM is an stk_dataframe
	object.
	* utils/stk_conditioning.m: Do not convert the output into an
	stk_dataframe object.

	stk_generate_samplepaths.m: Overload for stk_dataframe objects

	* arrays/@stk_dataframe/stk_generate_samplepaths.m: Overload
	stk_generate_samplepaths for stk_dataframe inputs. The output is
	always an stk_dataframe object.
	* utils/stk_generate_samplepaths.m: Simplify the code using the
	assumption that none of the inputs is an stk_dataframe object. The
	output is an stk_dataframe object if and only if
	model.response_name exists and is a non-empty string.

2015-01-21  Julien Bect  <julien.bect@supelec.fr>

	stk_feval.m: Various improvements.

	* arrays/generic/stk_feval.m: Update documentation. Try to make
	the code clearer. Use stk_disp_progress.

	stk_disp_progress.m: Display a progress indicator.

	* misc/text/stk_disp_progress.m: New function that displays a
	textual progress indicator.

2015-01-21  Emmanuel Vazquez  <emmanuel.vazquez@supelec.fr>

	stk_feval.m: Generalize to the case of a cell array of functions

	* arrays/generic/stk_feval.m: Generalize to the case of a cell
	array of functions (ticket #19 closed).

2015-01-08  Julien Bect  <julien.bect@supelec.fr>

	Improve conditional simulation examples.

	* examples/01_kriging_basics/stk_example_kb05.m: Add documentation.
	* examples/01_kriging_basics/stk_example_kb09.m: New example.

	stk_generate_samplepaths.m: Fix conditioning on noisy observations

	* utils/stk_generate_samplepaths.m: Fix conditioning on noisy
	observations, which was not implemented properly until now.
