@@ -81,7 +81,7 @@ Changes in version 2.3.0
 
    o stk_feval now handles cell-arrays of functions (ticket #19 closed).
 
-   o sort is overloaded for stk_dataframe objects
+   o sort and mtimes are now overloaded for stk_dataframe objects
 
 
 Changes in version 2.2.0
